catkin_ws/logs/iq_gnc/build.make.220.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_globalPos_cb(const ConstPtr&)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:162:4: error: ‘current_globalPos’ was not declared in this scope
  162 |    current_globalPos.publish(current_global_position);
      |    ^~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1891: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
